test/flowanalysis/recursion/rec_obj-3.good
rec_obj-3.chpl:1: error: Unable to determine type of field from nil
